--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,10 @@ header {
   grid-column: 2/-1;
   display: grid;
   grid-template-rows: 1fr 1fr;
+  padding: 1em 2em;
+
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.37);
+  z-index: 1;
 }
 .notifications-button {
   width: 25px;
@@ -17,9 +21,11 @@ header {
 }
 input {
   height: 2.2em;
-  width: 40vw;
+  width: 48vw;
   border-radius: 20px;
-  background-color: rgb(220, 214, 214);
+  background-color: rgb(201, 201, 201);
+  margin-left: 1em;
+  border: none;
 }
 
 .bottom-right {
@@ -28,12 +34,39 @@ input {
 }
 .main-profile img {
   border-radius: 40px;
+  margin-right: 1em;
+}
+.top-right {
+  justify-content: center;
+  gap: 2em;
 }
 
 button {
   background-color: rgb(18, 147, 190);
   color: white;
-  padding: 0.5em 2em;
-  border-radius: 1em;
+  padding: 0.8em 2.8em;
+  border-radius: 1.5em;
   font-weight: 600;
+  border: none;
+  cursor: pointer;
+}
+button:hover {
+  background-color: rgb(23, 181, 234);
+}
+button:active {
+  background-color: rgb(13, 93, 119);
+  /* color: black; */
+}
+.header-card img {
+  height: 42px;
+  border-radius: 26px;
+  cursor: pointer;
+}
+.bottom-left .description span {
+  font-size: 0.8em;
+  font-weight: 700;
+}
+.bottom-left .description p {
+  font-size: 1.5em;
+  font-weight: 700;
 }
