--- a/styles/main.css
+++ b/styles/main.css
@@ -1,45 +1,86 @@
 main {
-  background-color: lightpink;
+  background-color: rgb(234, 234, 234);
   display: grid;
   grid-template-columns: 3fr 1fr;
   padding: 1em;
+  padding-top: 2em;
+  padding-right: 2em;
+}
+main P {
+  color: grey;
+}
+.card {
+  padding: 0.5em 1em;
+  border-radius: 5px;
+}
+.project-container {
+  padding: 0 1em;
 }
 
 .projects {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1em;
+  gap: 1.2em;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin-top: 1em;
 }
 .project-card {
-  background-color: rgb(75, 139, 139);
+  background-color: white;
   height: 200px;
-  padding: 1em;
+
   padding-top: 1.4em;
-  box-shadow: -4px 0px 0px 0px rgb(0, 0, 0);
+  padding-left: 1em;
+  padding-right: 0.5em;
   border-radius: 12px;
+  box-shadow: 0px 1px 5px 2px #9f9f9f;
+  /* border-top-left-radius: 0;
+  border-bottom-left-radius: 0; */
+  border-left: 0.5em solid orange;
 }
 .announcement-card {
-  background-color: lightgrey;
+  margin-top: 1em;
+  background-color: rgb(255, 255, 255);
+  padding-top: 1em;
+  padding-bottom: 2em;
+  box-shadow: 0px 1px 5px 2px #9f9f9f;
+}
+.trending {
+  padding: 1em 0;
 }
 .trending-card {
-  background-color: lightseagreen;
+  background-color: white;
+  margin-top: 1em;
+  box-shadow: 4px 2px 14px 2px #9f9f9f;
 }
 .project-title {
   font-weight: 600;
   font-size: 1.2em;
+  color: black;
 }
-.card {
-  padding: 1em;
-  border-radius: 5px;
+.project-title::first-letter {
+  text-transform: capitalize;
 }
+
 .profile-card {
   display: flex;
-  margin: 1em auto;
+  margin: 2em auto;
 }
 
 .profile-card img {
   height: 42px;
   border-radius: 24px;
   margin-right: 1em;
+}
+hr {
+  margin: 1em 0;
+}
+.project-svg {
+  height: 1.4em;
+  cursor: pointer;
+}
+.project-icons {
+  margin-top: 2em;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1em;
 }
