--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,8 @@
 header {
-  background-color: lightblue;
+  background-color: white;
   grid-column: 2/-1;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 2fr;
   padding: 1em 2em;
 
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.37);
@@ -29,7 +29,7 @@ input {
 }
 
 .bottom-right {
-  justify-content: space-evenly;
+  justify-content: space-around;
   /* align-items: center; */
 }
 .main-profile img {
@@ -40,7 +40,6 @@ input {
   justify-content: center;
   gap: 2em;
 }
-
 button {
   background-color: rgb(18, 147, 190);
   color: white;
@@ -69,4 +68,11 @@ button:active {
 .bottom-left .description p {
   font-size: 1.5em;
   font-weight: 700;
+}
+
+.bell-icon svg {
+  width: 32px;
+}
+.magnify-svg {
+  margin-top: 4px;
 }
